# LearnAnalogClocks

./: .gitignore  README.md  build.bat  clocks.py  pyproject.toml
pyinstaller/: LearnAnalogClocks.spec
src/: clock.py  clocks.py  controller.py  model.py  view.py
